--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Academics - Reliance Public School</title>
+  <title>Admissions - Reliance Public School</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -28,10 +28,10 @@
       </a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="pg1.html">Home</a></li>
-      <li><a href="pg2.html">About Us</a></li>
-      <li class="active"><a href="pg3.html">Academics</a></li>
-      <li><a href="pg4.html">Admissions</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="academics.html">About Us</a></li>
+      <li><a href="admissions.html">Academics</a></li>
+      <li class="active"><a href="pg4.html">Admissions</a></li>
       <li><a href="pg5.html">Faculty</a></li>
       <li><a href="pg6.html">Student Life</a></li>
       <li><a href="pg7.html">Gallery</a></li>
@@ -43,31 +43,20 @@
 </nav>
 
 <div class="container">
-  <h2>Academic Programs</h2>
+  <h2>Admissions</h2>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6 col-md-offset-3">
       <div class="card">
-        <h3>Primary Education</h3>
-        <p>Grades 1–5: Focus on foundational literacy, numeracy, and creative development.</p>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card">
-        <h3>Middle School</h3>
-        <p>Grades 6–8: Emphasis on academic excellence, critical thinking, and skill-building.</p>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card">
-        <h3>High School</h3>
-        <p>Grades 9–12: Advanced academics, science & arts projects, and career preparation.</p>
+        <h3>How to Apply</h3>
+        <p>Submit the online admission form and necessary documents. Ensure the child meets the age and grade criteria.</p>
+        <p><strong>Contact:</strong> <a href="mailto:rps@gmail.com">rps@gmail.com</a></p>
       </div>
     </div>
   </div>
 </div>
 
 <footer>
-  <p>&copy; 2025 Reliance Public School | Academics</p>
+  <p>&copy; 2025 Reliance Public School | Admissions</p>
 </footer>
 </body>
 </html>
