--- a/admissions.html
+++ b/admissions.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - Reliance Public School</title>
+  <title>Academics - Reliance Public School</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -12,26 +12,25 @@
     .navbar { background-color: purple; border: none; }
     .navbar a { color: yellow !important; font-weight: bold; }
     h2 { color: purple; text-align: center; margin-top: 20px; }
-    p { text-align: center; font-size: 18px; margin: 0 50px; }
+    .card { border: 1px solid #ddd; border-radius: 8px; padding: 20px; margin: 20px 0; text-align: center; }
     footer { background: purple; color: white; text-align: center; padding: 15px; margin-top: 20px; }
     .logo { width: 50px; height: 50px; margin-right: 10px; }
   </style>
 </head>
 <body>
 
-<!-- Navbar -->
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="pg1.html">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/School_logo_sample.svg/1200px-School_logo_sample.svg.png" class="logo" alt="RPS Logo">
+        <img src="ghj.png" class="logo" alt="RPS Logo">
         Reliance Public School
       </a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="pg1.html">Home</a></li>
-      <li class="active"><a href="pg2.html">About Us</a></li>
-      <li><a href="pg3.html">Academics</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="academics.html">About Us</a></li>
+      <li class="active"><a href="admissions.html">Academics</a></li>
       <li><a href="pg4.html">Admissions</a></li>
       <li><a href="pg5.html">Faculty</a></li>
       <li><a href="pg6.html">Student Life</a></li>
@@ -43,13 +42,32 @@
   </div>
 </nav>
 
-<h2>About Reliance Public School</h2>
-<p>Reliance Public School is committed to providing high-quality education to students from primary to high school. 
-We focus on academic excellence, cultural activities, sports, and overall holistic development.</p>
+<div class="container">
+  <h2>Academic Programs</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <h3>Primary Education</h3>
+        <p>Grades 1–5: Focus on foundational literacy, numeracy, and creative development.</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card">
+        <h3>Middle School</h3>
+        <p>Grades 6–8: Emphasis on academic excellence, critical thinking, and skill-building.</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card">
+        <h3>High School</h3>
+        <p>Grades 9–12: Advanced academics, science & arts projects, and career preparation.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 <footer>
-  <p>&copy; 2025 Reliance Public School | About Us</p>
+  <p>&copy; 2025 Reliance Public School | Academics</p>
 </footer>
-
 </body>
 </html>
