--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="pg1.html">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/School_logo_sample.svg/1200px-School_logo_sample.svg.png" class="logo" alt="RPS Logo">
+        <img src="ghj.png" class="logo" alt="RPS Logo">
         Reliance Public School
       </a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="pg1.html">Home</a></li>
-      <li><a href="pg2.html">About Us</a></li>
-      <li><a href="pg3.html">Academics</a></li>
+      <li class="active"><a href="index.html">Home</a></li>
+      <li><a href="academics.html">About Us</a></li>
+      <li><a href="admissions.html">Academics</a></li>
       <li><a href="pg4.html">Admissions</a></li>
       <li><a href="pg5.html">Faculty</a></li>
       <li><a href="pg6.html">Student Life</a></li>
@@ -50,7 +50,7 @@
 </div>
 
 <footer>
-  <p>&copy; 2025 Reliance Public School | Home Page</p>
+  <p>&copy; 2025 Reliance Public School | Home Page|BY riwaz makaju</p>
 </footer>
 
 </body>
