--- a/pg5.html
+++ b/pg5.html
@@ -29,9 +29,9 @@
       </a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="pg1.html">Home</a></li>
-      <li><a href="pg2.html">About Us</a></li>
-      <li><a href="pg3.html">Academics</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="academics.html">About Us</a></li>
+      <li><a href="admissions.html">Academics</a></li>
       <li><a href="pg4.html">Admissions</a></li>
       <li class="active"><a href="pg5.html">Faculty</a></li>
       <li><a href="pg6.html">Student Life</a></li>
